--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "lucide-react": "^0.544.0",
+    "pdfjs-dist": "^3.4.120",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-pageflip": "^2.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
