--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,7 +22,10 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "lucide": "^0.544.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.3"
   }
 }
