--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "pdfjs-dist": "^3.4.120",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-joyride": "^2.9.3",
     "react-pageflip": "^2.0.3"
   },
   "devDependencies": {
